--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 0.5;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: show;
   padding: 20px;
   background: black;
   color: #33ff33;
